# Eco_Plug_Dashboard

backend/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  e2e_verification.py  pyproject.toml  scratch_test.py  test_genai_async.py  test_genai_chat.py  test_genai_schema.py  test_genai_schema2.py
backend/.github/workflows/: ci.yml
backend/alembic/: env.py
backend/alembic/versions/: 07827f2f3830_create_dashboard_complaint_workflows_.py  324a6b9e391a_create_dashboard_tables.py  400737c1b0b9_create_dashboard_admin_users_table.py
backend/app/: main.py
backend/app/ai/: cache.py  context_builders.py
backend/app/api/: health.py
backend/app/audit/: __init__.py
backend/app/core/: security.py
backend/app/database/: session.py
backend/app/dependencies/: auth.py
backend/app/middleware/: compression.py  logging.py  request_id.py  timing.py
backend/app/models/: __init__.py  dashboard.py  operational.py
backend/app/repositories/: complaint.py  dashboard.py  feedback.py  settings.py
backend/app/schemas/: ai.py  analytics.py  auth.py  complaint.py  dashboard.py  feedback.py  pagination.py  settings.py
backend/app/security/: cors.py  exceptions.py  headers.py
backend/app/services/: ai.py  analytics.py  complaint.py  dashboard.py  feedback.py  (+1 more)
backend/docs/: production-readiness.md
backend/scripts/: bootstrap_admin.py
backend/tests/: conftest.py  test_ai_service.py  test_analytics.py  test_auth.py  test_complaints.py  test_database.py  test_feedback.py  test_health.py  test_settings.py
(+64 files in other folders)
